# authatp

./: README.md  authatp.py  pyproject.toml
app/: __init__.py  app.db  forms.py  models.py
app/main/: routes.py
app/templates/: base.html  index.html
